src/test/ui/issues/issue-23122-1.stderr
error[E0275]: overflow evaluating the requirement `<GetNext<T> as Next>::Next`
  --> $DIR/issue-23122-1.rs:7:15
   |
LL | impl<T: Next> Next for GetNext<T> {
   |               ^^^^

error[E0275]: overflow evaluating the requirement `<GetNext<T> as Next>::Next`
  --> $DIR/issue-23122-1.rs:9:5
   |
LL |     type Next = <GetNext<T> as Next>::Next;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0275`.
